<resources>
    <string name="app_name">CS125 FINAL PROJECT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="day_after">DAY AFTER</string>
    <string name="task_name">Task Name:</string>
    <string name="set_task_name">Task Name:</string>
    <string name="write_task">Write Task</string>
    <string name="priority">Priority:</string>
    <string name="write_priority">Write Priority</string>
    <string name="estimated_hrs">Estimated Hrs:</string>
    <string name="complete_by">Complete by:</string>
    <string name="add">ADD</string>
    <string name="date">Date</string>
    <string name="hours">Hours</string>
    <string name="max_working_hours">Max Working Hours:</string>
    <string name="hrs">Hrs</string>
    <string name="done">Done</string>
    <string name="start">start</string>
    <string name="task_name_recyclerview">Task Name</string>
    <string-array name="priority">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
