<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeTaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/setHours"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="209dp"
            android:layout_marginTop="169dp"
            android:layout_marginEnd="93dp"
            android:autofillHints=""
            android:hint="@string/hours"
            android:inputType="number"
            android:textSize="30sp"
            tools:targetApi="o" />

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/DOC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/setDOC"
            android:layout_marginStart="198dp"
            android:layout_marginTop="227dp"
            android:layout_marginBottom="442dp"
            android:hint="@string/date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textSize="30sp"
            app:met_mask="##/##/##"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/setPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="122dp"
            android:layout_marginBottom="568dp"
            android:text="@string/priority"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/taskDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="307dp"
            android:layout_marginTop="341dp"
            android:layout_marginEnd="411dp"
            android:layout_marginBottom="731dp"
            android:enabled="false"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/priority"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/setPriority"
            android:layout_marginStart="124dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="577dp"
            android:spinnerMode="dropdown"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/setHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="178dp"
            android:layout_marginEnd="194dp"
            android:layout_marginBottom="512dp"
            android:text="@string/estimated_hrs"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setDOC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="234dp"
            android:layout_marginEnd="213dp"
            android:layout_marginBottom="456dp"
            android:text="@string/complete_by"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="232dp"
            android:layout_marginBottom="624dp"
            android:text="@string/set_task_name"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/taskName"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/setTask"
            android:layout_marginStart="181dp"
            android:layout_marginTop="57dp"
            android:layout_marginBottom="612dp"
            android:hint="@string/write_task"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="30sp"
            tools:targetApi="o" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            app:navigationIcon="@android:drawable/ic_menu_close_clear_cancel"
            app:title="Change Task"></android.support.v7.widget.Toolbar>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>