<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="164dp"
            android:layout_marginTop="368dp"
            android:enabled="false"
            android:text="@string/start" />

        <EditText
            android:id="@+id/startMaxNumhrs"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="302dp"
            android:layout_marginTop="211dp"
            android:ems="10"
            android:hint="@string/hrs"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/startSetNumWorkingHrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="221dp"
            android:text="@string/max_working_hours"
            android:textSize="30sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>